--- a/Chapter_03.ipynb
+++ b/Chapter_03.ipynb
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -960,13 +960,13 @@
        "[400 rows x 4 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lead2012 = pd.read_csv(\"FDA2012-lipstickdata.csv\")\n",
+    "lead2012 = pd.read_csv(\"data/FDA2012-lipstickdata.csv\")\n",
     "lead2012"
    ]
   },
